--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -116,6 +116,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import (\n",
+    "    load_json,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = load_json(\"../database/nasdaq.json\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -127,6 +147,178 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_tickers():\n",
+    "    data = load_json(\"../database/nasdaq.json\")\n",
+    "    ts = data[0][\"execution_ts\"]\n",
+    "    data = [r for r in data if r[\"execution_ts\"] == ts]\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import (\n",
+    "    load_jinja_prompt,\n",
+    ")\n",
+    "import datetime as dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tickers = load_tickers()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "symbols = tuple(f'{l[\"symbol\"]} ({l[\"companyName\"]})' for l in tickers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "symbols = sorted([l[\"symbol\"] for l in tickers])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AAPL',\n",
+       " 'NVDA',\n",
+       " 'MSFT',\n",
+       " 'AMZN',\n",
+       " 'GOOG',\n",
+       " 'GOOGL',\n",
+       " 'META',\n",
+       " 'TSLA',\n",
+       " 'AVGO',\n",
+       " 'COST',\n",
+       " 'NFLX',\n",
+       " 'TMUS',\n",
+       " 'ASML',\n",
+       " 'CSCO',\n",
+       " 'ADBE',\n",
+       " 'AMD',\n",
+       " 'PEP',\n",
+       " 'LIN',\n",
+       " 'AZN',\n",
+       " 'ISRG',\n",
+       " 'TXN',\n",
+       " 'INTU',\n",
+       " 'QCOM',\n",
+       " 'BKNG',\n",
+       " 'CMCSA',\n",
+       " 'AMGN',\n",
+       " 'HON',\n",
+       " 'AMAT',\n",
+       " 'ARM',\n",
+       " 'PDD',\n",
+       " 'PANW',\n",
+       " 'ADP',\n",
+       " 'VRTX',\n",
+       " 'GILD',\n",
+       " 'SBUX',\n",
+       " 'APP',\n",
+       " 'MU',\n",
+       " 'ADI',\n",
+       " 'INTC',\n",
+       " 'MELI',\n",
+       " 'LRCX',\n",
+       " 'CTAS',\n",
+       " 'KLAC',\n",
+       " 'PYPL',\n",
+       " 'ABNB',\n",
+       " 'MDLZ',\n",
+       " 'SNPS',\n",
+       " 'CDNS',\n",
+       " 'MRVL',\n",
+       " 'CRWD',\n",
+       " 'REGN',\n",
+       " 'MAR',\n",
+       " 'CEG',\n",
+       " 'FTNT',\n",
+       " 'DASH',\n",
+       " 'ORLY',\n",
+       " 'CSX',\n",
+       " 'TEAM',\n",
+       " 'WDAY',\n",
+       " 'TTD',\n",
+       " 'ADSK',\n",
+       " 'PCAR',\n",
+       " 'ROP',\n",
+       " 'CPRT',\n",
+       " 'NXPI',\n",
+       " 'CHTR',\n",
+       " 'MNST',\n",
+       " 'AEP',\n",
+       " 'PAYX',\n",
+       " 'DDOG',\n",
+       " 'ROST',\n",
+       " 'FANG',\n",
+       " 'ODFL',\n",
+       " 'FAST',\n",
+       " 'KDP',\n",
+       " 'BKR',\n",
+       " 'EA',\n",
+       " 'LULU',\n",
+       " 'XEL',\n",
+       " 'VRSK',\n",
+       " 'CTSH',\n",
+       " 'EXC',\n",
+       " 'KHC',\n",
+       " 'GEHC',\n",
+       " 'MCHP',\n",
+       " 'CCEP',\n",
+       " 'IDXX',\n",
+       " 'CSGP',\n",
+       " 'TTWO',\n",
+       " 'ZS',\n",
+       " 'DXCM',\n",
+       " 'ON',\n",
+       " 'ANSS',\n",
+       " 'WBD',\n",
+       " 'GFS',\n",
+       " 'MDB',\n",
+       " 'CDW',\n",
+       " 'BIIB',\n",
+       " 'ILMN',\n",
+       " 'SMCI',\n",
+       " 'MRNA']"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[l[\"symbol\"] for l in tickers]"
+   ]
   },
   {
    "cell_type": "code",
